# OpenTypeFewer

./: .gitignore  LICENSE  README.md  README_ZH.md  config.example.yaml  pyproject.toml  requirements.txt
icons/: opentypefewer.icns
src/voicepad/: __init__.py  __main__.py  app.py  asr_subprocess.py  panel_subprocess.py  settings_subprocess.py
src/voicepad/config/: config_manager.py
src/voicepad/modules/clipboard/: clipboard_writer.py
src/voicepad/modules/i18n/: i18n_manager.py
src/voicepad/modules/i18n/locales/: en.py  zh.py
src/voicepad/modules/main_window/: window_api.py
src/voicepad/modules/main_window/frontend/: panel.html  settings.html
src/voicepad/modules/main_window/frontend/css/: theme.css
src/voicepad/modules/main_window/frontend/js/: panel.js  settings.js
src/voicepad/modules/notify/: notifier.py
src/voicepad/modules/recorder/: audio_recorder.py
src/voicepad/modules/settings_window/: settings_gui.py
src/voicepad/modules/tray/: tray_app.py
src/voicepad/subsystems/asr/: asr_engine.py
src/voicepad/subsystems/hotkey_listener/: hotkey_manager.py
src/voicepad/subsystems/llm_engine/: llm_router.py  ollama_backend.py  remote_backend.py
tests/: test_catalog.md
tests/unit_tests/U001/: test_config_manager.py
tests/unit_tests/U002/: test_i18n_manager.py
tests/unit_tests/U003/: test_clipboard_writer.py
tests/unit_tests/U004/: test_notifier.py
tests/unit_tests/U005/: test_llm_router.py
tests/unit_tests/U006/: test_audio_recorder.py
