[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicepad"
version = "0.1.0"
description = "Local, open-source voice-to-clipboard tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VoicePad Contributors"},
]

[project.scripts]
voicepad = "voicepad.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests that require microphone, audio output, or GPU",
]
