[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentypefewer"
version = "0.1.0"
description = "OpenTypeFewer - Local, open-source voice-to-clipboard tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VoicePad Contributors"},
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "keyboard>=0.13.5",
    "pynput>=1.7.0",
    "pyperclip>=1.8.2",
    "pyyaml>=6.0",
    "ollama>=0.3.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "customtkinter>=5.2.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "plyer>=2.1.0",
    "pywebview>=4.4",
]

[project.scripts]
opentypefewer = "voicepad.__main__:main"
voicepad = "voicepad.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests that require microphone, audio output, or GPU",
]
